refactor gradient stuff a bit

--- a/simple_neural_net.ipynb
+++ b/simple_neural_net.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "I also wanted to use only sigmoid activation functions since I know that should work from prior experiences\n",
     "\n",
-    "The code works, I can now follow the code easily, but I want to go through it to understand better how the back-propagation code works.  I'm still looking for a full description of back propagation.  \n",
+    "The code works, I can now follow the code pretty easily.  I'm still looking for a better description of back propagation.  Between the blog post, Andrew Ng's Backpropagation Algorithm discussion https://www.youtube.com/watch?v=x_Eamf8MHwU&list=PLLssT5z_DsK-h9vYZkQkYNWcItqhlRJLN&index=51 and Fei-Fei Li's Stanford course (Serena Yeung lecturing) https://www.youtube.com/watch?v=d14TUNcbn1k I was able to convince myself that the backpropagation code made some sense.  But, I'm not sure I could code it from scratch, though.\n",
     "\n",
     "It would also be good to see if it can really accomplish the classification example claimed in the blog post.  \n"
    ]
@@ -44,12 +44,18 @@
     "def relu(Z):\n",
     "    return np.maximum(0,Z)\n",
     "\n",
-    "def sigmoid_backward(dA, Z):\n",
-    "    sig = sigmoid(Z)\n",
-    "    return dA * sig * (1 - sig)\n",
+    "# Note: refactored the gradient code from the blogpost.  These are just the gradients.\n",
     "\n",
-    "def relu_backward(dA, Z):\n",
-    "    dZ = np.array(dA, copy = True)\n",
+    "# derivative of sigmoid is sig * (1 - sig)\n",
+    "# https://math.stackexchange.com/questions/78575/derivative-of-sigmoid-function-sigma-x-frac11e-x\n",
+    "def sigmoid_gradient(Z):\n",
+    "    sig = sigmoid(Z)\n",
+    "    dZ = sig * (1 - sig)\n",
+    "    return dZ\n",
+    "\n",
+    "# derivative of relu is 1 when positive, 0 when negative\n",
+    "def relu_gradient(Z):\n",
+    "    dZ = np.ones(Z.shape)\n",
     "    dZ[Z <= 0] = 0\n",
     "    return dZ\n",
     "\n",
@@ -69,9 +75,8 @@
     "        layer_input_size = layer[\"input_dim\"]\n",
     "        layer_output_size = layer[\"output_dim\"]\n",
     "        \n",
-    "        # BUGFIX! original code multiplied all randn values\n",
-    "        # by 0.1 which REALLY screws things up and makes\n",
-    "        # the nets VERY HARD TO TRAIN.\n",
+    "        # BUGFIX?! original code multiplied all randn values\n",
+    "        # by 0.1 which REALLY makes the nets VERY HARD TO TRAIN.\n",
     "        # TODO: should this vary by activation type?\n",
     "        nn_params['W' + str(layer_idx)] = np.random.randn(\n",
     "            layer_output_size, layer_input_size)\n",
@@ -130,15 +135,19 @@
     "    m = A_prev.shape[1]\n",
     "    \n",
     "    if activation is \"relu\":\n",
-    "        backward_activation_func = relu_backward\n",
+    "        backward_gradient = relu_gradient\n",
     "    elif activation is \"sigmoid\":\n",
-    "        backward_activation_func = sigmoid_backward\n",
+    "        backward_gradient = sigmoid_gradient\n",
     "    else:\n",
     "        raise Exception('Non-supported activation function')\n",
     "    \n",
-    "    dZ_curr = backward_activation_func(dA_curr, Z_curr)\n",
+    "    # dZ = dA * g'(Z) \n",
+    "    dZ_curr = dA_curr * backward_gradient(Z_curr)\n",
+    "    # dW = 1/m * (dZ * A_prev)\n",
     "    dW_curr = np.dot(dZ_curr, A_prev.T) / m\n",
+    "    # db = 1/m * dZ\n",
     "    db_curr = np.sum(dZ_curr, axis=1, keepdims=True) / m\n",
+    "    # dA = W * dZ\n",
     "    dA_prev = np.dot(W_curr.T, dZ_curr)\n",
     "\n",
     "    return dA_prev, dW_curr, db_curr\n",
@@ -149,7 +158,8 @@
     "    grads_values = {}\n",
     "    #m = Y.shape[1]\n",
     "    Y = Y.reshape(Y_hat.shape)\n",
-    "   \n",
+    "    \n",
+    "    # dA is dL/dY_hat from the binary crossentropy loss\n",
     "    dA_prev = - (np.divide(Y, Y_hat) - np.divide(1 - Y, 1 - Y_hat))\n",
     "    \n",
     "    for layer_idx_prev, layer in reversed(list(enumerate(nn_architecture))):\n",
@@ -241,8 +251,11 @@
    "source": [
     "# random seed to allow us to repeat results. \n",
     "# I find that the seed DOES make a difference and sometimes\n",
-    "# we do not converge with different seeds.  \n",
-    "seed = 1984\n",
+    "# we do not converge with different seeds (e.g. 2020)\n",
+    "seed = 1984 \n",
+    "\n",
+    "# the learning rate\n",
+    "learning_rate = 0.2\n",
     "\n",
     "# first, try a simple input-follows-output.\n",
     "# if this doesn't work, nothing will.\n",
@@ -294,7 +307,6 @@
     "X = np.array([[0.0,0.0],[0.0,1.0],[1.0,0.0],[1.0,1.0]]).T\n",
     "Y = np.array([[0.0],[1.0],[1.0],[1.0]]).T\n",
     "epochs = 500\n",
-    "learning_rate = 0.5\n",
     "train_and_check(X,Y,nn,epochs,learning_rate)"
    ]
   },
@@ -547,7 +559,6 @@
     "X = np.array([[0.0,0.0],[0.0,1.0],[1.0,0.0],[1.0,1.0]]).T\n",
     "Y = np.array([[0.0],[1.0],[1.0],[0.0]]).T\n",
     "epochs = 1000\n",
-    "learning_rate = 0.5\n",
     "train_and_check(X,Y,nn,epochs,learning_rate)"
    ]
   },
