--- a/README.org
+++ b/README.org
@@ -5,6 +5,16 @@ explore different ways of using Jupyter Notebooks.
 
 I use Anaconda python to keep sane across Mac/Win/Linux.
 
+* Codespace
+
+I had to do this to get jupyter notebook running in the terminal.
+
+jupyter notebook --NotebookApp.allow_origin='https://rogerallen-scaling-umbrella-jj9pqqv9p6c5prj-8888.preview.app.github.dev' --no-browser
+
+I'm not sure how to get that origin except by starting it once, seeing the error and re-running.
+
+Then click on the http://localhost:8888/?token=XXX URL 
+
 * License
 
 These notebooks are in the public domain (or the equivalent where that
